# feofetch

./: CHANGELOG.md  CONFIGURATION.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT  LICENSE-MIT.md  README.md  config.default.toml
.github/workflows/: release.yml
src/: args.rs  ascii.rs  command_line.rs  config.rs  data.rs  fetch.rs  main.rs  packages.rs
