[package]
name = "feofetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
sys-info = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
etcetera = "0.4"
uptime_lib = "0.2"
which = "4.2"
anyhow = "1.0"
