[package]
name = "feofetch"
description = "Yet another (x)fetch tool, written in rust with cross-platform in mind."
repository = "https://github.com/ProspectPyxis/feofetch"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cli", "fetch"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1"
sys-info = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
etcetera = "0.4"
uptime_lib = "0.2"
which = "4.2"
clap = { version = "4.0", features = ["derive", "cargo"] }
anyhow = "1.0.67"
